tests/ui/errors/invalid_child.rs
use leptos_mview::component;

fn main() {
    component! {
        div { 3 }
    };
}